# rust-htmx-boilerplate

./: Cargo.toml  README.md  build.rs  package-lock.json  package.json
src/: error.rs  index.rs  main.rs  serve_static.rs
static/: style.css
templates/: _layout.html  error.html  index.html
