[package]
name = "rust-htmx"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = "0.15.4"
axum = { version = "0.8.8", features = ["macros"] }
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.5.3", features = ["util"] }
tower-http = { version = "0.6.8", features = ["fs", "trace"] }
